# soundalike

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt
.goals/human-quality-recommendations/: goal.md  inspector-feedback-1.md  inspector-feedback-10.md  inspector-feedback-11.md  inspector-feedback-12.md  inspector-feedback-13.md  inspector-feedback-14.md  inspector-feedback-2.md  inspector-feedback-3.md  inspector-feedback-4.md  inspector-feedback-5.md  inspector-feedback-6.md  inspector-feedback-7.md  inspector-feedback-8.md  inspector-feedback-9.md  status.json
benchmarks/: external_artist_truth.v1.json  heldout_top5_judgments.v1.json  heldout_top5_judgments.v2.json  heldout_top5_judgments.v4.json  human_eval_v10.html  human_eval_v11.html  human_eval_v13.html  human_eval_v14.html  human_eval_v15.html  soundalike_list_gold.v9.json  soundalike_multipositive.v7.json  soundalike_pairs.v1.json  soundalike_pairs.v2.json  soundalike_pairs.v3.json  soundalike_pairs.v4.json  soundalike_pairs.v5.json  soundalike_pairs.v6.json
docs/: CASE_STUDY.md  FULLTRACK_AUDIO.md  fma_large_test_report.json  fma_test_report.json
src/soundalike/: cli.py  (+7 more)
tests/: test_artist_identity_v14.py  test_artist_whiten.py  test_audio.py  test_audio_experiments.py  test_benchmark.py  test_catalog_cv.py  test_catalog_direct_v8.py  test_catalog_graph.py  test_catalog_policy.py  test_catalog_resources_v8.py  test_catalog_style.py  test_catalog_v8.py  test_catalog_v9.py  test_clap_catalog_v13.py  test_clap_catalog_v14.py  test_collaborative.py  test_deepvibe.py  test_eval_suite.py  test_final_protocol.py  test_fulltrack_eval.py  test_fulltrack_extract.py  test_fulltrack_fusion.py  test_fulltrack_selection.py  test_fulltrack_store.py  test_fulltrack_train.py  test_fulltrack_v2_diagnostics.py  test_genre_rerank.py  test_grow_broad.py  test_human_eval_v10.py  test_human_eval_v11.py  test_human_eval_v14.py  test_human_eval_v15.py  test_human_quality.py  test_index_store.py  test_jamendo_fulltrack.py  test_live.py  test_magnatagatune_v10.py  test_magnatagatune_v12.py  test_ml.py  test_oauth_callback.py  (+12 more)
tools/: aggregate_ratings.py  freeze_v17_submission.py
webapp/: DEPLOY.md  dev_server.py  index.html  package-lock.json  package.json  vercel.json
(+356 files in other folders)
